fix: update fullheight containers on mobile viewports to use 100dvh

--- a/frontend/src/assets/styles/base/global.css
+++ b/frontend/src/assets/styles/base/global.css
@@ -42,6 +42,7 @@ a {
 
 #root {
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
